--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -46,6 +46,7 @@
         <button type="submit" class="btn btn-primary">Checkout</button>
     </form>
 
+<!--    Add Checkout with vn pay-->
     <!-- Checkout button -->
 </div>
 <!-- Bootstrap JS and jQuery -->
