--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
             <div class="card">
                 <div class="card-body">
                     <h2 class="card-title">Thanh Toán Đơn Hàng</h2>
-                    <form th:action="@{/submitOrder}" method="post">
+                    <form th:action="@{/submitOrder}" metho="post">
                         <div class="form-group">
                             <label for="amount">Số tiền:</label>
                             <input type="number" class="form-control" id="amount" name="amount" required value="299999">
