:banana: done project

--- a/src/main/resources/templates/ordersuccess.html
+++ b/src/main/resources/templates/ordersuccess.html
@@ -39,7 +39,7 @@
                 </tr>
                 </tbody>
             </table>
-            <a href="/static" class="btn btn-primary">Về trang chủ</a>
+            <a href="" class="btn btn-primary">Về trang chủ</a>
         </div>
     </div>
 </div>
