--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -65,7 +65,7 @@
                 var price = parseFloat($(this).find('.price').text());
 
                 // Add the product of the quantity and price to the total
-                total += quantity * price;
+                total +=   price;
             });
 
             // Display the total
